# pqc-iiot

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  INTEGRATION.md  README.md  SECURITY_INVARIANTS.md  api.html  architecture.html  custom.css  dev_guide.html  hardware.html  index.html  print.html  searchindex.js  searchindex.json  usage.html
.github/workflows/: ci.yml  deploy-docs.yml  industrial_ci.yml
architecture/: space_grade_physics.html  threat_model_abyssal.html
benches/: benchmark.rs
config/: default.toml
crypto/: math.html  proofs.html
dev_guide/: ci_cd.html
docs/: README.md  book.toml  coap.md  crypto.md  integration.md  mqtt.md  performance.md  security.md
docs/src/: README.md  SUMMARY.md  api.md  architecture.md  dev_guide.md  hardware.md  index.md  usage.md
docs/src/architecture/: space_grade_physics.md  threat_model_abyssal.md
docs/src/crypto/: math.md  proofs.md
docs/src/dev_guide/: ci_cd.md
docs/src/hardware/: hal_internals.md  secure_element.md  tpm.md
docs/src/performance/: benchmarks.md
docs/src/roadmap/: whitepaper_pqc_boot.md
docs/src/security/: compliance.md  fips_mapping.md  formal_verification.md  invariants.md  threat_model.md
docs/src/usage/: coap.md  deep_iiot_scenarios.md  mqtt.md
examples/: advanced_iiot.rs  coap_secure_example.rs  config_example.rs  crypto_examples.rs  iiot_secure_comm.rs  mqtt_secure_example.rs  profile_example.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_3.rs
fuzz_target/: Cargo.toml
fuzz_target/src/: main.rs
hardware/: hal_internals.html  secure_element.html  tpm.html
patched-crates/config/: Cargo.toml
patched-crates/config/src/: de.rs
patched-crates/pqcrypto-mldsa/: Cargo.toml
patched-crates/pqcrypto-mldsa/src/: mldsa44.rs  mldsa65.rs  mldsa87.rs
performance/: benchmarks.html
pqc-boot/core/: Cargo.toml
pqc-boot/core/src/: falcon.rs  lib.rs  proofs.rs  sha256.rs  tmr.rs
pqc-boot/mbr/: Cargo.toml  linker.ld  stage1.s
pqc-boot/mbr/src/: main.rs
pqc-boot/uefi/: Cargo.toml
pqc-boot/uefi/src/: main.rs
roadmap/: whitepaper_pqc_boot.html
security/: compliance.html  fips_mapping.html  formal_verification.html  invariants.html  threat_model.html
src/: audit.rs  bike.rs  client_state.rs  coap_secure.rs  compliance.rs  config.rs  dilithium.rs  error.rs  fota.rs  kem.rs  lib.rs  mqtt_control_plane.rs  mqtt_secure.rs  persistence.rs  provisioning.rs  ratchet.rs  saber.rs  sign.rs  tests.rs  utils.rs
src/attestation/: mod.rs  policy.rs  quote.rs
src/crypto/: bike.rs  dilithium.rs  falcon.rs  hqc.rs  kyber.rs  profile.rs  saber.rs  traits.rs
src/security/: audit.rs  dos.rs  hybrid.rs  keystore.rs  metrics.rs  mod.rs  monotonic.rs  policy.rs  provider.rs  revocation.rs  time.rs  tpm.rs
tests/: chaos.rs  client_state_test.rs  control_plane_sync.rs  fuzz_target.rs  integration_tests.rs  mqtt_invariants.rs  tpm_test.rs
tests/common/: mod.rs
usage/: coap.html  deep_iiot_scenarios.html  mqtt.html
