[package]
authors = ["Mayckon Giovani <doomhammerhell@gmail.com>"]
categories = ["cryptography", "embedded", "no-std"]
description = "Post-quantum cryptography for Industrial IoT systems"
documentation = "https://docs.rs/pqc-iiot"
edition = "2021"
keywords = ["cryptography", "post-quantum", "iot", "security"]
license = "MIT"
name = "pqc-iiot"
readme = "README.md"
repository = "https://github.com/doomhammerhell/pqc-iiot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
all = ["kyber", "falcon", "dilithium", "saber", "bike", "mqtt", "coap"]
bike = []
coap = ["coap-lite"]
config = ["serde", "toml"]
default = ["std", "config", "mqtt", "coap", "kyber", "falcon"]
dilithium = ["pqcrypto-dilithium"]
embedded = ["no-std", "heapless"]
falcon = ["pqcrypto-falcon"]
heapless = []
kyber = ["pqcrypto-kyber"]
mqtt = ["rumqttc", "tokio"]
# ...
no-std = []
saber = ["pqcrypto-saber"]
std = []
alloc = []

# Profile-specific features
profile-kyber-dilithium = []
profile-kyber-falcon = []
profile-saber-dilithium = []

# Hardware acceleration features
# aesni = ["pqcrypto/aesni"]
# avx2 = ["pqcrypto/avx2"]
# neon = ["pqcrypto/neon"]

[dependencies]
cfg-if = "1.0"
coap-lite = {version = "0.9", optional = true}
heapless = "0.7"
pqcrypto-falcon = {version = "0.2.10", optional = true}
pqcrypto-kyber = {version = "0.7.6", optional = true}
pqcrypto-traits = "0.3.4"
rand_core = {version = "0.6", default-features = false}
rumqttc = {version = "0.12", optional = true}
serde = {version = "1.0", optional = true, default-features = false, features = ["derive"]}
tokio = {version = "1.0", optional = true, features = ["full"]}
toml = {version = "0.7", optional = true}
zeroize = { version = "1.8.1", default-features = false, features = ["derive", "alloc"] }

# Post-quantum cryptography dependencies
# pqc-bike = {version = "0.1", optional = true, default-features = false}
pqcrypto-dilithium = {version = "0.5", optional = true}
# pqc-kyber = {version = "0.7", optional = true, default-features = false}
pqcrypto-saber = {version = "0.1", optional = true}

# Phase 2 Dependencies
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] } # std_rng for higher quality on OS
serde_json = { version = "1.0", default-features = false, features = ["alloc", "std"] }
sha2 = { version = "0.10", default-features = false }
log = "0.4.29"
hex = "0.4.3"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
test-log = {version = "0.2", features = ["trace"]}
rumqttd = "0.19"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
env_logger = "0.11.9"
proptest = "1.10.0"

# [[bench]]
# harness = false
# name = "benchmarks"

[package.metadata.docs.rs]
features = ["std", "config", "profile-kyber-falcon", "profile-saber-dilithium", "profile-kyber-dilithium"]
