[package]
authors = ["Mayckon Giovani <doomhammerhell@gmail.com>"]
categories = ["cryptography", "embedded", "no-std"]
description = "Post-quantum cryptography for Industrial IoT systems"
documentation = "https://docs.rs/pqc-iiot"
edition = "2021"
keywords = ["cryptography", "post-quantum", "iot", "security"]
license = "MIT"
name = "pqc-iiot"
readme = "README.md"
repository = "https://github.com/doomhammerhell/pqc-iiot"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
all = [
    "kyber",
    "kyber-pqclean",
    "falcon",
    "falcon-pqclean",
    "dilithium",
    "saber",
    "hqc",
    "mqtt",
    "coap",
]

# Algorithm API features (backend-agnostic).
kyber = []
falcon = []

# PQClean-backed implementations (C toolchain required for non-host targets).
kyber-pqclean = ["dep:pqcrypto-mlkem"]
falcon-pqclean = ["dep:pqcrypto-falcon"]

hqc = ["pqcrypto-hqc"]
dilithium = ["dep:pqcrypto-mldsa"]
saber = ["pqcrypto-saber"]

coap = []
coap-std = ["std", "coap", "dep:coap-lite"]

config = ["std", "serde", "toml", "dep:serde_json"]
default = [
    "std",
    "config",
    "mqtt",
    "coap-std",
    "kyber",
    "kyber-pqclean",
    "falcon",
    "falcon-pqclean",
]

embedded = ["no-std", "heapless", "serde"]
heapless = []
mqtt = ["std", "rumqttc", "tokio", "dep:rand", "dep:serde_json", "serde_json/std"]
# ...
no-std = []
std = ["rand_core/getrandom", "log/std"]
alloc = []

# Profile-specific features
profile-kyber-dilithium = []
profile-kyber-falcon = []
profile-saber-dilithium = []

# Hardware acceleration features
# aesni = ["pqcrypto/aesni"]
# avx2 = ["pqcrypto/avx2"]
# neon = ["pqcrypto/neon"]

[dependencies]
cfg-if = "1.0"
coap-lite = {version = "0.9", optional = true}
# heapless 0.7 pulls `atomic-polyfill` on some targets (RUSTSEC-2023-0089). 0.9 moved to
# `portable-atomic`, reducing exposure to unmaintained crates.
heapless = { version = "0.9.2", default-features = false }
pqcrypto-falcon = {version = "0.2.10", optional = true, default-features = false}
pqcrypto-mlkem = {version = "0.1.1", optional = true, default-features = false}
pqcrypto-traits = { version = "0.3.4", default-features = false }
rand_core = {version = "0.6", default-features = false}
# We use plain TCP MQTT in this project; disable TLS/websocket defaults to reduce attack surface
# and avoid pulling rustls/ring unless explicitly required.
rumqttc = {version = "0.12", optional = true, default-features = false}
serde = {version = "1.0", optional = true, default-features = false, features = ["alloc", "derive"]}
tokio = {version = "1.0", optional = true, features = ["full"]}
toml = {version = "0.7", optional = true}
zeroize = { version = "1.8.1", default-features = false, features = ["derive", "alloc"] }

# Post-quantum cryptography dependencies
subtle = { version = "2.5", default-features = false }
pqcrypto-hqc = {version = "0.2.2", optional = true, default-features = false}
pqcrypto-mldsa = {version = "0.1.2", optional = true, default-features = false}
# pqc-kyber = {version = "0.7", optional = true, default-features = false}
pqcrypto-saber = {version = "0.1", optional = true, default-features = false}

# Phase 2 Dependencies
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
rand = { version = "0.8", optional = true, default-features = false, features = ["std", "std_rng"] } # std_rng for higher quality on OS
serde_json = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12", default-features = false }
log = { version = "0.4.29", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets", "zeroize"] }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
test-log = {version = "0.2", features = ["trace"]}
# Test broker: plain TCP only (no rustls/websocket) to keep CI/audit surface minimal.
rumqttd = { version = "0.19", default-features = false }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
env_logger = "0.11.9"
proptest = "1.10.0"

# [[bench]]
# harness = false
# name = "benchmarks"

[package.metadata.docs.rs]
features = ["std", "config", "profile-kyber-falcon", "profile-saber-dilithium", "profile-kyber-dilithium"]

[patch.crates-io]
# Narrow the dependency graph for audits:
# - config's default features enable YAML support via `yaml-rust` (unmaintained). We don't need YAML.
# - pqcrypto-mldsa uses `paste` (unmaintained) for identifier macros; `pastey` is a maintained drop-in replacement.
config = { path = "patched-crates/config" }
pqcrypto-mldsa = { path = "patched-crates/pqcrypto-mldsa" }
